Kubernetes/apps/prod/sinless-games/homepage/peerauthentication-homepage.yaml
# Kubernetes/apps/prod/sinless-games/homepage/peerauthentication-homepage.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: homepage-strict-mtls
  namespace: sinless-games
  labels:
    app.kubernetes.io/name: homepage
    app.kubernetes.io/instance: homepage
    app.kubernetes.io/component: dashboard
    app.kubernetes.io/part-of: sinless-games-platform
    app.kubernetes.io/managed-by: gitops
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: homepage
      app.kubernetes.io/instance: homepage
      app.kubernetes.io/component: dashboard
  mtls:
    mode: STRICT
