Kubernetes/apps/prod/sinless-games/homepage/service-homepage.yaml
# Kubernetes/apps/prod/sinless-games/homepage/service-homepage.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: sinless-games
  labels:
    app.kubernetes.io/name: homepage
    app.kubernetes.io/instance: homepage
    app.kubernetes.io/component: dashboard
    app.kubernetes.io/part-of: sinless-games-platform
    app.kubernetes.io/managed-by: gitops
    security.sinlessgames.io/exposure: cluster-internal
    security.sinlessgames.io/mtls: istio-strict
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Platform
    gethomepage.dev/name: Homepage
    gethomepage.dev/icon: homepage.png
    gethomepage.dev/description: Platform dashboard
    gethomepage.dev/href: https://homepage.sinlessgames.com"

    security.sinlessgames.io/purpose: "Internal ClusterIP Service for the Homepage dashboard."
    security.sinlessgames.io/public-exposure: "false"
    security.sinlessgames.io/ingress-required: "istio-gateway"
    security.sinlessgames.io/requires-authorization-policy: "true"
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: homepage
    app.kubernetes.io/instance: homepage
    app.kubernetes.io/component: dashboard
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
      appProtocol: http
  sessionAffinity: None
  internalTrafficPolicy: Cluster
